--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -3,7 +3,7 @@
     
         <div th:fragment="copy">
         	<hr></hr>        
-			<p style="text-align:center; color:red;"> &copy; ALL RIGHTS RESERVED BY 郭国锐</p>
+			<p style="text-align:center; color:red;"> &copy; ALL RIGHTS RESERVED BY ***</p>
         </div>
         
     </body>
